--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
