--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
     "prettier": "^2.8.4",
@@ -16,6 +20,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -24,6 +30,7 @@
     "eslint-config-next": "13.2.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.5"
   }
 }
