--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env*.test
 
 # vercel
 .vercel
@@ -35,3 +36,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 /.idea/*
+
+# certs
+/certificates
