--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "dayjs": "^1.11.7",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "next": "13.2.1",
