--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "dayjs": "^1.11.7",
+    "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "next": "13.2.1",
