--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.22.3",
+    "@floating-ui/react-dom": "^1.3.0",
+    "@headlessui/react": "^1.7.13",
     "@next/font": "^13.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
